<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:background="?backgroundLayout"    android:layoutDirection="rtl"    android:textDirection="rtl">    <com.google.android.material.appbar.AppBarLayout        android:id="@+id/abl_home"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="?backgroundLayout"        app:liftOnScroll="true"        android:layoutDirection="ltr">        <com.google.android.material.appbar.MaterialToolbar            android:id="@+id/tb_addTask"            android:layout_width="match_parent"            android:layout_height="match_parent"            app:title="@string/add_task"            app:titleCentered="true"            app:navigationIcon="@drawable/ic_back"            app:navigationIconTint="?IconColor"/>    </com.google.android.material.appbar.AppBarLayout>    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:paddingTop="30dp">            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_manageTask_title"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:layout_marginHorizontal="25dp"                app:boxCornerRadiusBottomEnd="15dp"                android:hint="@string/title">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_manageTask_title"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"                    android:singleLine="true"                    android:maxLines="1"                    android:maxEms="200"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_manageTask_description"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:layout_marginHorizontal="25dp"                app:boxCornerRadiusBottomEnd="15dp"                android:hint="@string/description"                android:layout_marginTop="15dp">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_manageTask_description"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.card.MaterialCardView                android:layout_width="match_parent"                android:layout_height="wrap_content"                app:cardCornerRadius="15dp"                app:strokeWidth="1dp"                app:strokeColor="?android:textColor"                app:cardElevation="0dp"                android:layout_marginTop="15dp"                android:layout_marginHorizontal="25dp">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical"                    android:layoutDirection="rtl"                    android:padding="15dp"                    android:gravity="start">                    <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/status"                        android:textSize="15sp"/>                    <RadioGroup                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:orientation="vertical"                        android:layout_marginTop="10dp"                        android:checkedButton="@id/rb_manageTask_todo">                        <ir.gonabad.taskmanagment.presentation.cviews.RadioButtonMedium                            android:id="@+id/rb_manageTask_todo"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="@string/todo"                            android:textSize="13sp"/>                        <ir.gonabad.taskmanagment.presentation.cviews.RadioButtonMedium                            android:id="@+id/rb_manageTask_doing"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="@string/doing"                            android:textSize="13sp"/>                        <ir.gonabad.taskmanagment.presentation.cviews.RadioButtonMedium                            android:id="@+id/rb_manageTask_done"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="@string/don"                            android:textSize="13sp"/>                    </RadioGroup>                </LinearLayout>            </com.google.android.material.card.MaterialCardView>            <com.google.android.material.card.MaterialCardView                android:layout_width="match_parent"                android:layout_height="wrap_content"                app:cardCornerRadius="15dp"                app:strokeWidth="1dp"                app:strokeColor="?android:textColor"                app:cardElevation="0dp"                android:layout_marginTop="15dp"                android:layout_marginHorizontal="25dp">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical"                    android:layoutDirection="rtl"                    android:padding="15dp"                    android:gravity="start">                    <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/assign_to"                        android:textSize="15sp"/>                    <com.google.android.material.chip.ChipGroup                        android:id="@+id/cg_manageTask_users"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        app:selectionRequired="true">                    </com.google.android.material.chip.ChipGroup>                </LinearLayout>            </com.google.android.material.card.MaterialCardView>            <com.google.android.material.button.MaterialButton                android:id="@+id/btn_manageTask_apply"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:text="@string/add"                android:layout_marginHorizontal="25dp"                android:layout_marginTop="30dp"                style="@style/ApplyButton"/>        </LinearLayout>    </androidx.core.widget.NestedScrollView></androidx.coordinatorlayout.widget.CoordinatorLayout>