<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:background="?backgroundLayout">    <com.google.android.material.appbar.AppBarLayout        android:id="@+id/abl_home"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="?backgroundLayout"        app:liftOnScroll="true">        <com.google.android.material.appbar.MaterialToolbar            android:id="@+id/tb_addUser"            android:layout_width="match_parent"            android:layout_height="match_parent"            app:title="@string/add_user"            app:titleCentered="true"            app:navigationIcon="@drawable/ic_back"            app:navigationIconTint="?IconColor"/>    </com.google.android.material.appbar.AppBarLayout>    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:layout_marginTop="20dp">            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_addUser_Username"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:layout_marginHorizontal="25dp"                app:boxCornerRadiusBottomEnd="15dp"                android:layout_marginTop="15sp"                android:hint="@string/username">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_addUser_Username"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_addUser_password"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:layout_marginHorizontal="25dp"                app:boxCornerRadiusBottomEnd="15dp"                android:hint="@string/password"                android:layout_marginTop="20dp">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_addUser_password"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.card.MaterialCardView                android:layout_width="match_parent"                android:layout_height="wrap_content"                app:cardCornerRadius="15dp"                app:strokeWidth="1dp"                app:strokeColor="?android:textColor"                app:cardElevation="0dp"                android:layout_marginTop="20dp"                android:layout_marginHorizontal="25dp">                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:orientation="vertical"                    android:layoutDirection="rtl"                    android:padding="15dp"                    android:gravity="start">                    <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:text="@string/user_side"                        android:textSize="15sp"/>                    <RadioGroup                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:orientation="vertical"                        android:layout_marginTop="10dp"                        android:checkedButton="@id/rb_addUser_user">                        <ir.gonabad.taskmanagment.presentation.cviews.RadioButtonMedium                            android:id="@+id/rb_addUser_user"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="@string/user"                            android:textSize="13sp"/>                        <ir.gonabad.taskmanagment.presentation.cviews.RadioButtonMedium                            android:id="@+id/rb_addUser_admin"                            android:layout_width="match_parent"                            android:layout_height="wrap_content"                            android:text="@string/admin"                            android:textSize="13sp"/>                    </RadioGroup>                </LinearLayout>            </com.google.android.material.card.MaterialCardView>            <com.google.android.material.button.MaterialButton                android:id="@+id/btn_addUser_apply"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:text="@string/add"                android:layout_marginHorizontal="25dp"                android:layout_marginTop="30dp"                style="@style/ApplyButton"/>            <ProgressBar                android:id="@+id/pb_adduser"                android:layout_width="50dp"                android:layout_height="50dp"                android:layout_gravity="center"                android:visibility="gone"/>        </LinearLayout>    </androidx.core.widget.NestedScrollView></androidx.coordinatorlayout.widget.CoordinatorLayout>