<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:background="?backgroundLayout">    <com.google.android.material.appbar.AppBarLayout        android:id="@+id/abl_home"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="?backgroundLayout"        app:liftOnScroll="true">        <com.google.android.material.appbar.MaterialToolbar            android:id="@+id/tb_addCategory"            android:layout_width="match_parent"            android:layout_height="match_parent"            app:title="@string/add_category"            app:titleCentered="true"            app:navigationIcon="@drawable/ic_back"            app:navigationIconTint="?IconColor"/>            </com.google.android.material.appbar.AppBarLayout>        <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">                <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:paddingTop="20dp">            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_addCategory_name"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:layout_marginHorizontal="25dp"                app:boxCornerRadiusBottomEnd="15dp"                android:hint="@string/name_category">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_addCategory_name"                    android:layout_width="match_parent"                    android:layout_height="match_parent"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.button.MaterialButton                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:text="@string/add"                android:textSize="15sp"                android:padding="15dp"                android:layout_marginHorizontal="30dp"                app:cornerRadius="10dp"                android:layout_marginTop="30dp"/>        </LinearLayout>    </androidx.core.widget.NestedScrollView></androidx.coordinatorlayout.widget.CoordinatorLayout>