<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:background="?backgroundLayout">    <com.google.android.material.appbar.AppBarLayout        android:id="@+id/abl_home"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="?backgroundLayout"        app:liftOnScroll="true"        android:layoutDirection="ltr">        <com.google.android.material.appbar.MaterialToolbar            android:id="@+id/tb_taskList"            android:layout_width="match_parent"            android:layout_height="match_parent"            app:title="@string/task_list"            app:titleCentered="true"            app:navigationIcon="@drawable/ic_back"            app:navigationIconTint="?IconColor"/>    </com.google.android.material.appbar.AppBarLayout>    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:layoutDirection="rtl"            android:textDirection="rtl">            <com.google.android.material.card.MaterialCardView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                app:cardCornerRadius="10dp"                android:layout_marginHorizontal="24dp"                app:cardElevation="0dp"                app:strokeWidth="1dp"                android:layout_marginBottom="10dp"                android:layout_marginTop="15dp"                app:strokeColor="?IconColor">                <ir.gonabad.taskmanagment.presentation.cviews.AutoCompleteTextViewMedium                    android:id="@+id/actv_sessionHistory_sort"                    style="@style/AutoCompleteTextView"                    android:layout_width="wrap_content"                    android:layout_height="match_parent"                    android:background="@android:color/transparent"                    android:focusable="false"                    android:textSize="14sp"                    android:focusableInTouchMode="false"                    android:paddingStart="13dp"                    android:paddingEnd="13dp"                    android:paddingVertical="10dp"                    android:text="@string/show_all"                    android:drawableEnd="@drawable/arrow_down_settings"                    android:drawableTint="?android:textColor"                    android:drawablePadding="27dp"                    android:gravity="center" />            </com.google.android.material.card.MaterialCardView>            <androidx.recyclerview.widget.RecyclerView                android:id="@+id/rv_taskList"                android:layout_width="match_parent"                android:layout_height="wrap_content"                tools:itemCount="10"                tools:listitem="@layout/item_task"                android:clipToPadding="false"                android:paddingTop="20dp"                android:paddingBottom="100dp"/>        </LinearLayout>    </androidx.core.widget.NestedScrollView>    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton        android:id="@+id/fab_taskList_addTask"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/add_task"        app:icon="@drawable/ic_add"        app:iconTint="@color/white"        android:textColor="@color/white"        android:layout_gravity="bottom|start"        android:layout_margin="24dp"        android:layoutDirection="rtl"        android:textDirection="rtl"/>    <ProgressBar        android:id="@+id/pb_taskList"        android:layout_width="50dp"        android:layout_height="50dp"        android:layout_gravity="center"        android:visibility="gone"/>    <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium        android:id="@+id/tv_taskList_empty"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/list_is_empty"        android:layout_gravity="center"        android:textSize="14sp"        android:textColor="?android:textColorSecondary"        android:visibility="gone"/></androidx.coordinatorlayout.widget.CoordinatorLayout>