<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:background="?backgroundLayout"    android:layoutDirection="rtl">    <ImageView        android:id="@+id/iv_login_bg"        android:layout_width="match_parent"        android:layout_height="150dp"        android:layout_marginLeft="100dp"        android:src="@drawable/bg_circle_auth"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintRight_toRightOf="parent"/>    <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/login"        android:textSize="30sp"        android:textColor="@color/white"        android:layout_margin="30dp"        app:layout_constraintTop_toTopOf="@id/iv_login_bg"        app:layout_constraintStart_toStartOf="@id/iv_login_bg" />    <com.google.android.material.card.MaterialCardView        android:id="@+id/cv_login"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="@id/iv_login_bg"        android:layout_marginHorizontal="30dp"        app:cardCornerRadius="15dp"        app:cardElevation="10dp"        android:layout_marginTop="120dp">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:orientation="vertical"            android:layout_margin="20dp">            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_login_username"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                android:hint="@string/username">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_login_username"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"                    android:singleLine="true"                    android:maxLines="1"                    android:maxEms="200"                    android:textSize="13sp"/>            </com.google.android.material.textfield.TextInputLayout>            <com.google.android.material.textfield.TextInputLayout                android:id="@+id/etl_login_password"                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/CustomInput"                app:boxCornerRadiusBottomEnd="15dp"                android:hint="@string/password"                android:layout_marginTop="10dp"                android:layout_marginBottom="50dp">                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/et_login_password"                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:inputType="text"                    android:singleLine="true"                    android:maxLines="1"                    android:maxEms="200"                    android:textSize="13sp"/>            </com.google.android.material.textfield.TextInputLayout>        </LinearLayout>    </com.google.android.material.card.MaterialCardView>    <androidx.coordinatorlayout.widget.CoordinatorLayout        android:layout_width="0dp"        android:layout_marginHorizontal="50dp"        android:layout_height="wrap_content"        app:layout_constraintEnd_toEndOf="@id/cv_login"        app:layout_constraintStart_toStartOf="@id/cv_login"        app:layout_constraintTop_toBottomOf="@id/cv_login"        app:layout_constraintBottom_toBottomOf="@id/cv_login"        app:cardElevation="11dp"        app:cardCornerRadius="15dp"        android:backgroundTint="?colorPrimary"        android:elevation="10dp">        <com.google.android.material.button.MaterialButton            android:id="@+id/btn_login_confirm"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/login"            android:textSize="12sp"            style="@style/ApplyButton" />        <ProgressBar            android:id="@+id/pb_login"            android:visibility="gone"            android:layout_width="40dp"            android:layout_height="40dp"            android:layout_gravity="center"/>    </androidx.coordinatorlayout.widget.CoordinatorLayout></androidx.constraintlayout.widget.ConstraintLayout>