<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:grid="http://schemas.android.com/tools"    android:background="?backgroundLayout">    <com.google.android.material.appbar.AppBarLayout        android:id="@+id/abl_home"        android:layout_width="match_parent"        android:layout_height="?attr/actionBarSize"        android:background="?backgroundLayout"        app:liftOnScroll="true"        android:layoutDirection="ltr">        <com.google.android.material.appbar.MaterialToolbar            android:id="@+id/tb_settingAdmin"            android:layout_width="match_parent"            android:layout_height="match_parent"            app:title="@string/admin_setting"            app:titleCentered="true"            app:navigationIcon="@drawable/ic_back"            app:navigationIconTint="?IconColor"/>    </com.google.android.material.appbar.AppBarLayout>    <androidx.core.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:layout_marginTop="30dp">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="vertical"                android:paddingBottom="10dp"                android:paddingTop="10dp"                android:clipToPadding="false"                android:layout_marginHorizontal="15dp">                <com.google.android.material.card.MaterialCardView                    android:id="@+id/cv_settingAdmin_addUser"                    android:layout_width="match_parent"                    android:layout_weight="1"                    android:layout_height="100dp"                    app:cardCornerRadius="15dp"                    app:cardElevation="5dp"                    android:layout_marginHorizontal="5dp"                    android:backgroundTint="?backgroundCard">                    <LinearLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:orientation="vertical"                        android:layout_gravity="center"                        android:gravity="center">                        <ImageView                            android:layout_width="50dp"                            android:layout_height="50dp"                            android:scaleType="fitXY"                            android:src="@drawable/ic_add_user"                            app:tint="?colorPrimary" />                        <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:singleLine="true"                            android:ellipsize="end"                            android:text="@string/add_user"                            android:layout_marginTop="10dp"                            android:textSize="16sp"/>                    </LinearLayout>                </com.google.android.material.card.MaterialCardView>                <com.google.android.material.card.MaterialCardView                    android:id="@+id/cv_settingAdmin_userList"                    android:layout_width="match_parent"                    android:layout_weight="1"                    android:layout_height="100dp"                    app:cardCornerRadius="15dp"                    app:cardElevation="5dp"                    android:layout_marginTop="20dp"                    android:layout_marginHorizontal="5dp">                    <LinearLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:orientation="vertical"                        android:layout_gravity="center"                        android:gravity="center">                        <ImageView                            android:layout_width="50dp"                            android:layout_height="50dp"                            android:scaleType="fitXY"                            android:src="@drawable/ic_person"                            app:tint="?colorPrimary" />                        <ir.gonabad.taskmanagment.presentation.cviews.TextViewMedium                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:singleLine="true"                            android:ellipsize="end"                            android:text="@string/user_list"                            android:layout_marginTop="10dp"                            android:textSize="16sp"/>                    </LinearLayout>                </com.google.android.material.card.MaterialCardView>            </LinearLayout>        </LinearLayout>    </androidx.core.widget.NestedScrollView></androidx.coordinatorlayout.widget.CoordinatorLayout>